--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
+.App {
+ background: linear-gradient(90deg, rgb(240, 221, 222) 27%, rgb(212, 250, 241) 100%);
+}
 
+.App a {
+  color: plum;
+}
 .App-header {
 margin: 30px, 0;
 }
@@ -7,4 +13,5 @@ margin: 30px, 0;
   max-width: 200px;
   display: block;
   margin: 0 auto;
+padding-top: 30px;
 }
