added new components and functions to display meanings of words

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,8 +1,11 @@
 .Dictionary {
-   text-align: center;
+   
     padding: 30px;
 }
 
+form {
+    text-align: center;
+}
 
 .App-footer {
 text-align: center;
