--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,5 +1,5 @@
 .Dictionary {
-  padding: 30px;
+
   font-size: 14px;
  font-family: 'Poppins', sans-serif;
 }
@@ -8,7 +8,37 @@ form {
   text-align: center;
 }
 
+
+
+ .Dictionary .hint {
+  font-size: 11px;
+  text-align: center;
+ }
+
+
+.Search-Section {
+  padding: 30px;
+  border-radius: 6px;
+ 
+}
+
+
 .App-footer {
   text-align: center;
   margin: 30px, 0;
+}
+
+section {
+  background: rgb(248, 234, 248, 0.3);
+  border-radius: 7px;
+  box-shadow: 10px 10px 20px rgba(138, 130, 137, 0.2);
+}
+.Dictionary input {
+ border-radius: 6px;
+ border: solid 1px rgb(204, 191, 204);
+ padding: 6px, 4px;
+ background: rgb(250, 241, 250);
+   box-shadow: 10px 10px 20px rgba(138, 130, 137, 0.2);
+   
+  
 }
