--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 .App {
  background: linear-gradient(90deg, rgb(240, 221, 222) 27%, rgb(212, 250, 241) 100%);
+ max-width: 960px;
+ margin: 0 auto;
+ border-radius: 8px;
+ box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.1);
+}
+
+body {
+background: rgb(252, 245, 251);
+
+
 }
 
 h1 {
